# kiwisdr-freedv-extension

./: .gitattributes  .gitignore  README.md
dashboard/: app.js  index.html  styles.css
decoder/: CMakeLists.txt
decoder/include/freedv/: backend.hpp  dashboard.hpp  kiwi_protocol.hpp  rade_v1_wrapper.h  resampler.hpp
decoder/src/: codec2_backend.cpp  dashboard.cpp  kiwi_protocol.cpp  main.cpp  rade_backend.cpp  rade_v1_wrapper.c  resampler.cpp
decoder/tests/: backend_test.cpp  dashboard_test.cpp  protocol_test.cpp  rade_reference_test.cpp  reference_test.cpp  transport_reference_test.cpp
deploy/: 112.fw  build-codec2.sh  build-radae.sh  decoder.env.example  freedv-decoder-ai64.conf  freedv-decoder.fw.example  freedv-decoder.service  freedv-reporter.service  install-ai64-local.sh  install-decoder.sh  install-remote-decoder.sh  provision-lxc.ps1  reporter.env.example  rollback-ai64-preparation.sh  rollback-remote-decoder.sh  wget
docs/: ai64-local-decoder.md  dashboard.md  deployment-status.md  external-decoder-vm.md  feasibility.md  installation.md  modes.md  one-shot-installer.md  protocol.md  rollback.md
kiwi-overlay/extensions/FreeDV/: freedv.cpp  freedv.h
kiwi-overlay/patches/: 0001-publish-freedv.patch  0002-freedv-monitor-control.patch  0003-silence-return-audio.patch  0004-freedv-direct-status-relay.patch
kiwi-overlay/web/extensions/FreeDV/: FreeDV.css  FreeDV.js  FreeDV.min.css  FreeDV.min.js
reporter/: __init__.py  reporter.py  requirements.txt  test_reporter.py
tests/: test_ai64.py  test_audio_gate.py  test_dashboard.py  test_one_shot_installer.py
tools/: activate-ai64-local.sh  apply-kiwi-overlay.sh  backup-kiwi-on-device.sh  backup-kiwi.ps1  benchmark-codec2.sh  build-decoder-candidate.sh  configure-kiwi-freedv.py  deploy-decoder-release.sh  deploy-kiwi-release.sh  install-freedv.py  prune-decoder-snapshots.ps1  rollback-ai64-local.sh  rollback-kiwi-release.sh  run-kiwi-build.sh  set-ct-radev1.sh  set-decoder-radev1.sh  soak-ct.sh  soak-dashboard.sh  soak-decoder-guest.sh  soak-kiwi.sh  test-radev1-load.sh  test-reference-modes.sh  validate-ai64-local.sh  verify-kiwi-candidate.sh
